--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -1,7 +1,20 @@
 html {
-	background-color: rgb(51,61,71);
+	background-color: #FFFFFFFF;
+}
+
+body {
+	background-color: #FFFFFFFF;
 }
 
 #form {
 	width: 100%;
+	background-color: #FFFFFFFF;
+}
+
+#navbar {
+	background-color: #FFFFFFFF;
+}
+
+#landing {
+    text-align: center;
 }
